2016-06-08  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xindy-src/user-commands/xindy.in: Use kpsewhich to search for modules.
	Performance is lost. However user modules specified by the -M option
	can be under <anytexmf>/xindy/modules/.

2016-02-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Makefile.am, configure.ac: New convention.

2015-02-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac/xindy.ac: Drop the obsolete '--with-xindy-recode'.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2014-09-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import xindy-2.5.1.
	* Makefile.am, configure.ac, version.ac: Adapted.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2014-04-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import xindy-2.5.0.
	* Makefile.am, configure.ac, version.ac: Adapted.

2013-10-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use Makefile fragment for persian alphabet.

2013-07-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Moved Makefile fragments to ../../am/.

2013-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac, ac/xindy.ac: Fixed some typos, replacing
	'with-recode' => 'with-xindy-recode'.

2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (scriptsdir), configure.ac (pkglibdir, docdir):
	Change texmf => texmf-dist.

2013-01-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use KPSE_COND_WIN32_WRAP for win32 wrappers.

2012-12-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use KPSE_BASIC to enable silent rules.
	* Makefile.am: Enable silent rules.

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac:
	Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-11-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Add persian alphabet. 
	* version.ac: New file defining the xindy version.
	* configure.ac: Adapt.
